fix: some fixes on publishers and consumers
